# tinycode

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  tinycode.py
