[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tinycode"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.6",
    "langchain-openai>=0.3",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
tinycode = "tinycode:cli"

[tool.hatch.build.targets.wheel]
sources = ["."]
include = ["tinycode.py"]
